--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "mongouri": "^0.0.0",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
+    "request": "^2.88.2",
     "uuid": "^8.3.2"
   }
 }
