--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "uuid": "^8.3.2"
   }
 }
